Add Css style and Html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="tabs top left">
+            <ul class="tabs_head">
+                <li class="tabs_item active">Таб 1</li>
+                <li class="tabs_item">Таб 2</li>
+                <li class="tabs_item">Таб 3</li>
+                <li class="tabs_item">Таб 4</li>
+                <li class="tabs_item">Таб 5</li>
+            </ul>
+            <div class="tabs_body">
+                <div class="tabs_info active">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum dolor temporibus distinctio quasi nemo ex pariatur? Nihil sed est minus! Temporibus pariatur repellendus libero inventore, quisquam tempore obcaecati sint ratione.
+                </div>
+                <div class="tabs_info">
+                    Lorem ipsum, dolor sit amet conseus libero inventore, quisquam tempore obcaecati sint ratione.
+                </div>
+                <div class="tabs_info">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum dolor temporibus distinctio quasi nemo ex pariatur? Nihil sed  libero inventore, quisquam tempore obcaecati sint ratione.
+                </div>
+                <div class="tabs_info">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum dolor temporibus distinctio quasi nemo ex pariatur? Ni quisquam tempore obcaecati sint ratione.
+                </div>
+                <div class="tabs_info">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum dolor temporibus distinctio quasi nemo ex pariatur? 
+                </div>
+            </div>     
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
