Change style top to left

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="tabs top left">
+        <div class="tabs left">
             <ul class="tabs_head">
                 <li class="tabs_item active">Таб 1</li>
                 <li class="tabs_item">Таб 2</li>
